--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     compile files('src/main/libs/nineoldandroids-2.4.0.jar')
     compile 'me.relex:circleindicator:1.1.8@aar'
     compile 'com.orhanobut:logger:1.8'//log输出框架
+    compile 'fr.tvbarthel.blurdialogfragment:lib:2.1.5'
 }
