--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.android.support:support-v4:23.0.1'
     compile 'com.android.support:percent:23.0.1'
     compile 'org.roboguice:roboguice:3.0'
+    compile 'com.github.bumptech.glide:glide:3.5.2'
 //    compile ('com.google.inject.extensions:guice-assistedinject:3.0'){
 //        exclude group: 'com.google.inject'
 //    }
